Fix compilation issue